feat: refactor several things